<resources>
    <string name="app_name">ShouldIWalk</string>
    <string name="dbQueriesResource">database/db-queries.xml</string>
    <string name="firstTimeWelcomeText">Welcome to ShouldIWalk! To take a tour of the app, press the \"Learn More\" button!</string>
    <string name="learnMoreFirstTimeWelcomeButtonText">Learn more</string>
    <string name="dismissFirstTimeWelcomeButtonText">Dismiss</string>
    <string name="firstPredictionAddEventButtonText">Record trip data</string>
    <string name="firstPredictionCardMenuButtonDescription">Shows the popup menu for progress to first prediction card</string>
    <string name="progressToFirstPredictionCardTitle">Progress to first prediction</string>
    <string name="progressToFirstPredictionCardInProgressSubtitle">You still have to add %1$d more events before we can predict anything.</string>
    <string name="lineSeparatorContentDescription">A line that visually separates user interface elements</string>
    <string name="progressToFirstPredictionCardDoneSubtitle">We can now predict something for you!</string>
    <string name="add_trip_data_activity_title">Record trip data</string>
    <string name="gotoStartLocationScreenButtonText">Start location</string>
    <string name="gotoEndLocationScreenButtonText">End location</string>
    <string name="gotoStartDateTimeScreenButtonText">Start date</string>
    <string name="gotoEndDateTimeScreenButtonText">End date</string>
    <string name="gotoWeatherScreenButtonText">Weather</string>
    <string name="gotoTrafficLevelScreenButtonText">Traffic</string>
    <string name="gotoEffortLevelScreenButtonText">Effort</string>
    <string name="gotoRushLevelScreenButtonText">Rush</string>
    <string name="gotoMeanOfTransportScreenButtonText">Mean of transport</string>
    <string name="gotoSatisfactionLevelScreenButtonText">Satisfaction</string>
    <string name="gotoNextScreenButtonButtonText">Next</string>
    <string name="gotoNextScreenButtonIntermediaryText">Next</string>
    <string name="gotoNextScreenButtonFinalText">Finish</string>
    <string name="infoAlertDismissButtonText">Dismiss</string>
    <string name="noNetworkConnectionDialogTitle">No network connection</string>
    <string name="noNetworkConnectionDialogMessage">No network connection detected! To use this application, it is strongly advised that you have an internet connection available!</string>
    <string name="dateTimePickerStartDateTitle">Choose the start date for your trip</string>
    <string name="dateTimePickerEndDateTitle">Choose the end date for your trip</string>
    <string name="datePickerChooseDateButtonText">Choose date</string>
    <string name="datePickerChooseTimeButtonText">Choose time</string>
    <string name="meanOfTransportImageButtonDescription">More information button</string>
    <string name="temperatureSeekbarTitle">Temperature</string>
    <string name="temperatureSeekbarSubtitle">Choose an approximate value for the temperature you felt across the trip.</string>
    <string name="temperatureMeasureUnitText">Degrees Celsius</string>
    <string name="datetimePickerCardSubtitle">You can update the date to the one you choose by clicking either of the buttons below.</string>
    <string name="weatherStatusListTitle">Weather conditions</string>
    <string name="weatherStatusListSubtitle">
        Choose the approximate weather conditions you encounter throughout your trip. Click the weather status
        below to browse other weather conditions.
    </string>
    <string name="weatherStatusesAlertDialogTitle">Weather statuses</string>
    <string name="dismissButtonOkText">Done</string>
    <string name="tripDataDatabaseAddSuccessTitle">Successfully added a new trip data record!</string>
    <string name="R.string.tripDataDatabaseAddSuccessSubtitle">The configured trip data has successfully been added to the database!</string>
</resources>
