<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/StandardPadding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_shape"
            style="@style/StandardPadding"
            android:layout_marginBottom="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="10dp">

            <TextView
                style="@style/CardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/temperatureSeekbarTitle"/>

            <ImageView
                android:id="@+id/lineSeparator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/horizontalSeparatorColor"
                android:contentDescription="@string/lineSeparatorContentDescription"/>

            <TextView
                style="@style/CardSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/temperatureSeekbarSubtitle"/>

            <SeekBar
                android:id="@+id/temperatureSeekbar"
                style="@style/Widget.AppCompat.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:progressDrawable="@drawable/grey_seekbar_drawable"
                android:thumb="@drawable/grey_seekbar_thumb"
                android:minHeight="10dp"
                android:maxHeight="10dp"
                android:max="140"
                android:progress="30"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/temperatureInCelsiusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="27"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:layout_toEndOf="@id/temperatureInCelsiusTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperatureMeasureUnitText"
                    android:layout_centerInParent="true"
                    android:textAlignment="textEnd"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_shape"
            style="@style/StandardPadding"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                style="@style/CardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/weatherStatusListTitle"/>

            <ImageView
                android:id="@+id/lineSeparator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/horizontalSeparatorColor"
                android:contentDescription="@string/lineSeparatorContentDescription"/>

            <TextView
                style="@style/CardSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/weatherStatusListSubtitle"/>

            <TextView
                android:id="@+id/weatherConditionDisplayTextView"
                style="@style/StandardPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Sample Weather condition"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#555555"
                android:background="@drawable/card_shape"
                android:backgroundTint="#b3d58a"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/weatherFooterLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>

</ScrollView>

